--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <button onclick="inicio()">Inicio</button>
     <script>
            function inicio(){
-               alert("hola mundo")
+               confirm("¿Seguro que quieres continuar?");
            }
     </script>
 </body>
