--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head/>
 <body>
     <button onclick="inicio()">Inicio</button>
     <script>
@@ -9,9 +11,8 @@
                    title: "tu bot esta activo",
                    text: "bienvenido",
                    icon: "success"
-               })	;
+               });
            }
     </script>
 </body>
-</head>
 </html>
