Change welcome message in Swal.fire

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
            function inicio(){
                Swal.fire({
                    title: "tu bot esta activo",
-                   text: "bienvenido",
+                   text: "Que rayos está pasando aquí",
                    icon: "success"
                });
            }
