--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-</head/>
+</head>
 <body>
     <button onclick="inicio()">Inicio</button>
     <script>
@@ -13,6 +13,12 @@
                    icon: "success"
                });
            }
+    </script>
+    <button onclick="pag1()">Siguiente</button>
+    <script>
+         function pag1() {
+              window.location.href="/PAG1";
+         }
     </script>
 </body>
 </html>
