Fix icon property in Swal.fire function

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -8,8 +8,7 @@
       Swal.fire({
         title: "Todo se está iniciando",
         text: "Espere unos minutos",
-        icon: "success",
-        confirmButtonText: "Siguiente"
+        icon: "success
       });
     }
   </script>
