Change button text from 'Siguiente' to 'Click'

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <body>
-  <button onclick="Pag1()">Siguiente</button>
+  <button onclick="Pag1()">Click</button>
   <script>
     function Pag1() {
       Swal.fire({
