--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+</head>
 <body>
   <button onclick="Pag1()">Click</button>
   <script>
@@ -13,5 +15,4 @@
          }
   </script>
 </body>
-</head>
 </html>
