--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -10,7 +10,8 @@
              Swal.fire({
                title: "Todo se está iniciando",
                text: "Espere unos minutos",
-               icon: "success
+               icon: "success",
+               confirmButtonText: "continuar"
              });
          }
   </script>
