--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,6 +6,7 @@
 <body>
   <button onclick="Pag1()">Click</button>
   <script>
+         let nombre = prompt("Ingresa tu nombre: ")
          function Pag1() {
              Swal.fire({
                title: "Todo se está iniciando",
@@ -13,6 +14,9 @@
                icon: "success",
                confirmButtonText: "continuar"
              });
+             if (nombre == "Marc") {
+                 document.write("Bienvenido Marc");
+             }
          }
   </script>
 </body>
