Refactor welcome message to use template literals

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -15,7 +15,7 @@
                confirmButtonText: "continuar"
              });
              if (nombre == "Marc") {
-                 document.write("Bienvenido Marc");
+                 document.write(`Bienvenido ${nombre}`);
              }
          }
   </script>
