--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -17,7 +17,7 @@
              if (nombre == nombre) {
                  document.write(`Bienvenido ${nombre}`);
              }
-             else if (confirmButtonTex == "confirmar") {
+             else if (confirmButtonText == "continuar") {
                  document.write("Excelente trabajo amigo");
              }
          }
