--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -4,7 +4,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <p id="Texto">Texto</p>
+  <p id="">Texto</p>
   <button onclick="Pag1()">Click</button>
   <script>
          let nombre = prompt("Ingresa tu nombre: ")
