--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -21,7 +21,7 @@
                     nombre = "Invitado"
                 }
                 if (nombre == nombre) {
-                    let x = document.getElementById("Texto");
+                    let x = document.getElementById("");
                     x.innerHTML = `Bienvenido ${nombre}, me alegra tenerte de regreso`;
                     x.style.color = "blue";
                 }
