--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -8,11 +8,6 @@
   <script>
          <p id="text">Texto</p>
          function Pag1() {
-            Swal.fire({
-              title: "Casi listo",
-              text: "Espere...",
-              icon: "info"
-            })
             let y = confirm("Desea continuar")
             if (y == true) {
                 let nombre = prompt("Ingresa tu nombre: ");
@@ -24,6 +19,13 @@
                 x.innerHTML = `Bienvenido ${nombre}, me alegra tenerte de regreso`;
                 x.style.color = "blue";
                 
+            }
+            else (y == false) {
+                Swal.fire({
+                    title: "Algo falló",
+                    text: "Asegurese de precionar en ACEPTAR",
+                    icon: "info"
+                })
             }
          }
          
