--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,11 @@
               window.location.href="/PAG1";
          }
     </script>
+    <style> 
+         <body> {
+              background-color: blue,
+              color: red
+         }
+    </style>
 </body>
 </html>
