--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
          }
     </script>
     <style> 
-         <body> {
+         body{
               background-color: blue,
               color: red
          }
