--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,14 @@
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style> 
          body{
-              background-color: blue,
-              color: red
+              background-color: blue;
+              color: red;
+         }
+         button{
+              padding: 12px;
+              border-radius: 10px;
+              border: none;
+              cursor: pointer;
          }
 </style>
 </head>
