Add CSS styles to inicio.html
Added styles for body, button, and text elements.

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -2,6 +2,22 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<style> 
+    body{
+        background-color: blue;
+        color:green;
+    }
+    button{
+        background-color: red;
+        color: white;
+        padding: 20px;
+        border-radius: 50px;
+        border: none;
+    }
+    #Texto{
+        color: red;
+    }
+</style>
 </head>
 <body>
 <p id="text">Texto</p>
