--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,6 +6,7 @@
     body{
         background-color: blue;
         color:green;
+        font-size: 50px;
     }
     button{
         background-color: red;
@@ -18,6 +19,7 @@
         color: red;
     }
 </style>
+<p>BIENVENIDO</p>
 </head>
 <body>
 <p id="text">Texto</p>
