Change welcome text color from blue to yellow

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -35,7 +35,7 @@
                 
                 let x = document.getElementById("text");
                 x.innerHTML = `Bienvenido ${nombre}, me alegra tenerte de regreso`;
-                x.style.color = "blue";
+                x.style.color = "yellow";
                 
             } else {
                 Swal.fire({
