Add welcome message and increase font size

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
          body{
               background-color: blue;
               color: red;
+              font-size: 50px;
          }
          button{
               padding: 12px;
@@ -17,6 +18,7 @@
 </head>
 
 <body>
+<p>Amig@ te doy la bienvenida</p>
     <button onclick="inicio()">Inicio</button>
     <script>
            function inicio(){
