Update welcome message in inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -19,7 +19,7 @@
         color: red;
     }
 </style>
-<p>BIENVENIDO</p>
+<p>Espero que disfrutes este sitio web:::...:::</p>
 </head>
 <body>
 <p id="text">Texto</p>
