--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
               background-color: blue;
               color: red;
               font-size: 50px;
+              font-family: Potland;
+              text-align: center;
          }
          button{
               padding: 12px;
