--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
                    text: "Que rayos está pasando aquí",
                    icon: "success"
                });
+               window.location.href=P"/Pag2";
            }
     </script>
     <button onclick="pag1()">Siguiente</button>
