Fix URL redirection syntax in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                    text: "Que rayos está pasando aquí",
                    icon: "success"
                });
-               window.location.href=P"/Pag2";
+               window.location.href="/Pag2";
            }
     </script>
     <button onclick="pag1()">Siguiente</button>
