Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -5,10 +5,18 @@
       <p>El bot aún no está disponible para tu teléfono</p>
       <style>
         body{
-          color: red;
+          color: black;
           background-color:blue;
         }
       </style>
+      <button ocnlick="comprobar()"> Comprobar</button>
+      <script>
+              function comprobar() {
+                     Swal.fire({
+                       title: "Comprobando" ,
+                       text: "espere unos minutos..." ,
+                       icon: "success",
+                       color: #121212})}
 </body>
 </head>
 </html>
