Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -17,6 +17,7 @@
                        text: "espere unos minutos..." ,
                        icon: "success",
                        color: #121212})}
+      </script>
 </body>
 </head>
 </html>
