Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -16,7 +16,7 @@
                        title: "Comprobando" ,
                        text: "espere unos minutos..." ,
                        icon: "success",
-                       color: #121212})}
+                       color: "#121212"})}
       </script>
 </body>
 </head>
