Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -10,7 +10,7 @@
       </style>
 </head>
 <body>
-      <button ocnlick="comprobar()"> Comprobar</button>
+      <button onclick="comprobar()"> Comprobar</button>
       <script>
               function comprobar() {
                      Swal.fire({
