--- a/templates/limork.html
+++ b/templates/limork.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
- <p>El bot aún no está disponible para tu teléfono</p>
       <style>
         body{
           color: black;
           background-color:blue;
         }
       </style>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+      </script>
 </head>
 <body>
+<p> El bot está siendo programado </p>
       <button onclick="comprobar()"> Comprobar</button>
       <script>
               function comprobar() {
