Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -5,6 +5,8 @@
         body{
           color: black;
           background-color:blue;
+          text-align: center;
+          font-family: arial;
         }
       </style>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
