Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -24,7 +24,7 @@
                        color: "#121212",
                        confirmButtonText: "Continuar" }).then((resultado) => {
                   if (resultado.isConfirmed) {
-                      windon.location.href="/chat";
+                      window.location.href="/chat";
 } })
                       }
       </script>
