Actualizar index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                let msj=confirm("¿Quiere continuar?")
                lef y = document.getElementById("mj");
                y.innerHTML = msj
-               y.color="green"
+               y.style.color="green"
                if (y==true) {
                    window.location.href="/Pag2";
                } else {
