Actualizar index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
            
            function inicio(){
                let msj=confirm("¿Quiere continuar?")
-               lef y = document.getElementById("mj");
+               let y = document.getElementById("mj");
                y.innerHTML = msj
                y.style.color="green"
                if (y==true) {
