--- a/templates/chat.html
+++ b/templates/chat.html
@@ -3,6 +3,15 @@
 <head>
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
      </script>
+     <style>
+            #chat{
+                  color: blue;
+                  padding: red;
+                  }
+            body{
+                 background-color: Sky blue;
+                 font-size: 50xp;}
+     </style>
 </head>
 <body>
 <div id="chat"></div>
