--- a/templates/chat.html
+++ b/templates/chat.html
@@ -9,7 +9,7 @@
                   padding: red;
                   }
             body{
-                 background-color: Sky blue;
+                 background-color: skyblue;
                  font-size: 50xp;}
      </style>
 </head>
