Actualizar chat.html

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,12 +5,17 @@
      </script>
      <style>
             #chat{
+                  width: 100xp;
                   color: blue;
-                  padding: red;
+                  padding: 20xp;
+                  heigth: 400xp;
                   }
             body{
-                 background-color:sky blue;
-                 font-size: 50xp;}
+               background-color: sky blue;
+               font-size: 50xp;}
+            input{
+                 width: 500xp;
+                 padding: 10xp;}
      </style>
 </head>
 <body>
