Actualizar chat.html

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,17 +5,17 @@
      </script>
      <style>
             #chat{
-                  width: 100xp;
+                  width: 100px;
                   color: blue;
-                  padding: 20xp;
-                  heigth: 400xp;
+                  padding: 20px;
+                  heigth: 400px;
                   }
             body{
-               background-color: sky blue;
-               font-size: 50xp;}
+               background-color: skyblue;
+               font-size: 50px;}
             input{
-                 width: 500xp;
-                 padding: 10xp;}
+                 width: 500px;
+                 padding: 10px;}
      </style>
 </head>
 <body>
