Actualizar chat.html

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,7 +8,7 @@
                   width: 100px;
                   color: blue;
                   padding: 20px;
-                  heigth: 400px;
+                  height: 400px;
                   }
             body{
                background-color: skyblue;
