--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,15 +7,16 @@
             #chat{
                   width: 100px;
                   color: blue;
-                  padding: 20px;
-                  height: 400px;
+                  padding: 9px;
+                  height: 1000px;
                   }
             body{
                background-color: skyblue;
-               font-size: 50px;}
+               font-size: 20px;
+               font-family: Arial;}
             input{
-                 width: 500px;
-                 padding: 10px;}
+                 width: 30px;
+                 padding: 5px;}
      </style>
 </head>
 <body>
