--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,10 @@
               border-radius: 10px;
               border: none;
               cursor: pointer;
+              font-size:10px;
+              font-family: Times;
+              color: white;
+              
          }
 </style>
 <p>Amig@ te doy la bienvenida</p>
