Actualizar index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
               font-size:10px;
               font-family: Times;
               color: white;
-              
+              background-color: #121212;
          }
 </style>
 <p>Amig@ te doy la bienvenida</p>
