Actualizar limork.html

--- a/templates/limork.html
+++ b/templates/limork.html
@@ -4,9 +4,16 @@
       <style>
         body{
           color: black;
-          background-color:blue;
+          background-color:skyblue;
           text-align: center;
-          font-family: arial;
+          font-family: Arial;
+          font-size: 20px;
+        }
+        button{
+          padding: 10px;
+          background-color: #121212;
+          color: white;
+          font-size: Arial;
         }
       </style>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
