--- a/templates/chat.html
+++ b/templates/chat.html
@@ -6,13 +6,13 @@
      <style>
             #chat{
                   width: 100px;
-                  color: blue;
+                  color: #121212;
                   padding: 9px;
                   height: 1000px;
                   }
             body{
                background-color: skyblue;
-               font-size: 20px;
+               font-size: 10px;
                font-family: Arial;}
             input{
                  width: 30px;
