--- a/templates/registro.html
+++ b/templates/registro.html
@@ -2,7 +2,17 @@
 <html>
 <head>
      <h1>Por favor completa tu registro para continuar</h1>
+</head>
 <body>
-<form type="text" name="username" 
-placeholder="Usuario" required>
-<>
+<form method="POST"> 
+    <input type="text" name="username" 
+    placeholder="Usuario" required>
+    <br><br>
+    <input type="password" name="password"
+    placeholder="Contraseña" required>
+    <br><br>
+    <button type="submit">Registrarse</button>
+    </form>
+<a href="/login">Ya tengo cuenta</a>
+</body>
+</html>
