Actualizar inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -36,7 +36,7 @@
                 let x = document.getElementById("text");
                 x.innerHTML = `Bienvenido ${nombre}, me alegra tenerte de regreso`;
                 x.style.color = "yellow";
-                
+                window.document.href="/registros"
             } else {
                 Swal.fire({
                     title: "Algo falló",
