Actualizar inicio.html

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -27,7 +27,7 @@
          function Pag1() {
             let y = confirm("Desea continuar")
             if (y == true) {
-                window.location.href="/registros";
+                window.location.href="/registro";
             } else {
                 Swal.fire({
                     title: "Algo falló",
