--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,7 +11,7 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-<a href="/login">Ya tengo cuenta</a>
+    <button onclick="/sesion">iniciar sesión</button>
 </head>
 </body>
 </html>
