Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,7 +11,11 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-    <button onclick="/sesion">iniciar sesión</button>
+    <button onclick="sesion()">iniciar sesión</button>
+    <script>
+            function sesion() {
+                window.location.href="/sesion"}
+    </script>
 </head>
 </body>
 </html>
