Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -14,7 +14,7 @@
     <button onclick="sesion()">iniciar sesión</button>
     <script>
             function sesion() {
-                window.location.href="/sesion"}
+                window.location.href="/sesion";}
     </script>
 </head>
 </body>
