--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -1,1 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
+<html>
+<head>
+<body>
+     <form type="text" name="usuario"
+     placeholder="Usuario" require>
+     <br><br>
