--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <body>
-     <form type="text" name="usuario"
+     <form 
+     <type="text" name="usuario"
      placeholder="Usuario" require>
      <br><br>
+     
