Actualizar sesion.html

--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <body>
-     <form 
-     <type="text" name="usuario"
+     <form methods="POST">
+     <input type="text" name="usuario"
      placeholder="Usuario" require>
+     <br><br>
+     <input type="password" name="password" 
+     placeholder="Contraseña" require>
      <br><br>
      
