--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -9,4 +9,5 @@
      <input type="password" name="password" 
      placeholder="Contraseña" require>
      <br><br>
+     <button type="sub" >
      
