--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -9,5 +9,8 @@
      <input type="password" name="password" 
      placeholder="Contraseña" require>
      <br><br>
-     <button type="sub" >
-     
+     <button type="submit">Iniciar sesión</button>
+     </form>
+</body>
+</head>
+</html>
