Actualizar sesion.html

--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -6,7 +6,7 @@
      <input type="text" name="usuario"
      placeholder="Usuario" require>
      <br><br>
-     <input type="password" name="password" 
+     <input type="password" name="seguro" 
      placeholder="Contraseña" require>
      <br><br>
      <button type="submit">Iniciar sesión</button>
