Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,11 +11,7 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-    <button onclick="sesion()">iniciar sesión</button>
-    <script>
-            function sesion() {
-                window.location.href="/sesion";}
-    </script>
+<a href="/sesion">ya tengo cuenta</a>
 </head>
 </body>
 </html>
