--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,7 +11,7 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-<a href="/sesion">ya tengo cuenta</a>
+<a href="sesion.html">ya tengo cuenta</a>
 </head>
 </body>
 </html>
