--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <body>
-     <form methods="POST">
+     <form method="POST">
      <input type="text" name="usuario"
      placeholder="Usuario" require>
      <br><br>
