Add CSS styles to registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        body{
+            color:#121212;
+            background-color: red;
+            font-family: Arial;
+        }
+    </style>
 <body>
 <form method="POST"> 
     <input type="text" name="username" 
