Actualizar sesion.html

--- a/templates/sesion.html
+++ b/templates/sesion.html
@@ -3,10 +3,10 @@
 <head>
 <body>
      <form method="POST">
-     <input type="text" name="usuario"
+     <input type="text" name="usuario1"
      placeholder="Usuario" require>
      <br><br>
-     <input type="password" name="seguro" 
+     <input type="password" name="seguro1" 
      placeholder="Contraseña" require>
      <br><br>
      <button type="submit">Iniciar sesión</button>
