Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -6,6 +6,11 @@
             color:#121212;
             background-color: red;
             font-family: Arial;
+            font-size: 10px;
+        }
+        button{
+            padding: 15px;
+            radius: 13px 
         }
     </style>
 <body>
