Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -10,7 +10,10 @@
         }
         button{
             padding: 15px;
-            radius: 13px 
+            border-radius: 13px;
+            font-align: center;
+            border: none;
+            
         }
     </style>
 <body>
