--- a/templates/registro.html
+++ b/templates/registro.html
@@ -7,6 +7,7 @@
             background-color: red;
             font-family: Arial;
             font-size: 10px;
+            font-align: center;
         }
         button{
             padding: 15px;
