Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -7,12 +7,12 @@
             background-color: red;
             font-family: Arial;
             font-size: 10px;
-            font-align: center;
+            text-align: center;
         }
         button{
             padding: 15px;
             border-radius: 13px;
-            font-align: center;
+            text-align: center;
             border: none;
             
         }
