--- a/templates/registro.html
+++ b/templates/registro.html
@@ -3,10 +3,10 @@
 <head>
     <style>
         body{
-            color:#121212;
+            color: white;
             background-color: red;
             font-family: Arial;
-            font-size: 10px;
+            font-size: 20px;
             text-align: center;
         }
         button{
