--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,22 @@
       </script>
 <style> 
          body{
-              background-color: blue;
+              margin:0;
+              height: 100vh;
+             backgrond:linear-gradient(-45deg, #ff4e50, #fc913a, #f9d423, #ede575);
+              
+              
+              background-size: 400% 400%;
+              animation:fondo animado 10s easy infinito;
               color: red;
               font-size: 50px;
               font-family: Potland;
               text-align: center;
          }
+         @keyframes fondoAnimado {
+              0% {backgrond-position: 0% 50%;}
+              50% {backgrond-position: 100% 50%;}
+              100% {backgrond-position: 0% 50%}}
          button{
               padding: 12px;
               border-radius: 10px;
