Actualizar index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,10 @@
               color: white;
               background-color: #121212;
          }
+         p{
+           font-family: Arial;
+           font-size: 9px;
+          }
 </style>
 <p>Amig@ te doy la bienvenida</p>
 </head>
