--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
       </script>
+      <script src="https://cdm.jsdelivr.net/parti cles.js/2.0.0/particles.min.js"></script>
 <style> 
          body{
               margin:0;
@@ -35,11 +36,19 @@
            font-family: Arial;
            font-size: 9px;
           }
+         #particles-js{
+           position: fidex;
+           width: 100%;
+           height: 100%;
+           background: #121212;
+           z-index: -1;
+         } 
 </style>
 <p>Amig@ te doy la bienvenida</p>
 </head>
 
 <body>
+<div id="particles-js"></div>
     <button onclick="inicio()">Inicio</button>
     <script>
            
@@ -59,6 +68,13 @@
          function pag1() {
               window.location.href="/PAG1";
          }
+     particlesJS("particles-js", {
+       particles: {
+         number: {value: 80},
+         size: {value: 3},
+         move: {speed: 2}
+       }
+     })
     </script>
 </body>
 </html>
