--- a/templates/index.html
+++ b/templates/index.html
@@ -11,17 +11,17 @@
              backgrond:linear-gradient(-45deg, #ff4e50, #fc913a, #f9d423, #ede575);
               
               
-              background-size: 100% 100%;
-              animation:fondo animado 10s easy infinito;
+              background-size: 400% 400%;
+              animation:fondoAnimado 10s ease infinite;
               color: red;
               font-size: 50px;
               font-family: Potland;
               text-align: center;
          }
          @keyframes fondoAnimado {
-              0% {backgrond-position: 0% 50%;}
-              50% {backgrond-position: 100% 50%;}
-              100% {backgrond-position: 0% 50%}}
+              0% {background-position: 0% 50%;}
+              50% {background-position: 100% 50%;}
+              100% {background-position: 0% 50%}}
          button{
               padding: 12px;
               border-radius: 10px;
@@ -37,7 +37,7 @@
            font-size: 9px;
           }
          #particles-js{
-           position: fidex;
+           position: fixed;
            width: 100%;
            height: 100%;
            background: #121212;
