--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
       </script>
-      <script src="https://cdm.jsdelivr.net/parti cles.js/2.0.0/particles.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <style> 
          body{
               margin:0;
               height: 100vh;
-             backgrond:linear-gradient(-45deg, #ff4e50, #fc913a, #f9d423, #ede575);
+             background:linear-gradient(-45deg, #ff4e50, #fc913a, #f9d423, #ede575);
               
               
               background-size: 400% 400%;
