--- a/templates/index.html
+++ b/templates/index.html
@@ -33,8 +33,8 @@
               background-color: #121212;
          }
          p{
-           font-family: Arial;
-           font-size: 9px;
+           font-family: times;
+           font-size: 30px;
           }
          #particles-js{
            position: fixed;
