--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,11 +3,6 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style> 
-    body{
-        background-color: blue;
-        color:green;
-        font-size: 50px;
-    }
     button{
         background-color: red;
         color: white;
@@ -15,8 +10,16 @@
         border-radius: 50px;
         border: none;
     }
-    #text{
-        color: red;
+    p{
+        text-align: center;
+        font-size: 10px;
+    }
+    #particles-js{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background: #00BFFF;
+        z-index: -1;
     }
 </style>
 <p>Espero que disfrutes este sitio web:::...:::</p>
@@ -38,5 +41,13 @@
          }
          
   </script>
+  <script>
+      particlesJS("particles-js", {
+          particles: {
+              number: {value: 100},
+              size: {value: 4},
+              move: {speed: 2.5}
+          }
+      })
 </body>
 </html>
