--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -18,7 +18,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background: #00BFFF;
+        background-color: #00BFFF;
         z-index: -1;
     }
 </style>
