--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -18,7 +18,7 @@
         position: relative;
         width: 100%;
         height: 100%;
-        background-color: #00BFFF;
+        background: #121212;
         z-index: -1;
     }
 </style>
