--- a/templates/aviso.html
+++ b/templates/aviso.html
@@ -14,7 +14,7 @@
         confirmButtonText: "Acaptar <="
       }).then((data) => {
         if (data == true) {
-          document.location.href = "/registro";
+          window.location.href = "/registro";
         }
       })
     }
