--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
            position: fixed;
            width: 100%;
            height: 100%;
-           background: #ff23a2;
+           background: #121212;
            z-index: -1;
          } 
 </style>
