--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -13,10 +13,10 @@
     }
     p{
         text-align: center;
-        font-size: 10px;
+        font-size: 50px;
     }
     #particles-js{
-        position: relative;
+        position: fixed;
         width: 100%;
         height: 100%;
         background: #121212;
@@ -50,5 +50,6 @@
               move: {speed: 2.5}
           }
       })
+  </script>
 </body>
 </html>
