--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -26,6 +26,7 @@
 <p>Espero que disfrutes este sitio web:::...:::</p>
 </head>
 <body>
+<div id="particles-js"></div>
   <button onclick="Pag1()">Click</button>
   <script>
          function Pag1() {
@@ -40,10 +41,7 @@
                 })
             }
          }
-         
-  </script>
-  <script>
-      particlesJS("particles-js", {
+          particlesJS("particles-js", {
           particles: {
               number: {value: 100},
               size: {value: 4},
@@ -51,5 +49,6 @@
           }
       })
   </script>
+     
 </body>
 </html>
