--- a/templates/chat.html
+++ b/templates/chat.html
@@ -32,7 +32,8 @@
             }
           #particles-js{
                width: 100%;
-               height: 100%
+               position: fixed; 
+               height: 100%;
                background: skyblue;
                z-index: -1;
           }
