--- a/templates/chat.html
+++ b/templates/chat.html
@@ -27,8 +27,11 @@
                  100% {background-position: 0% 50%;}
             }
             input{
-                 width: 50px;
-                 padding: 30px;
+                 width: 300px;
+                 padding: 10px;
+                 border-radius:25px;
+                 height: 45px;
+                 border: none;
             }
           #particles-js{
                position: fixed;
