--- a/templates/registro.html
+++ b/templates/registro.html
@@ -4,17 +4,22 @@
     <style>
         body{
             color: white;
-            background-color: red;
+            background-color: skyblue;
             font-family: Arial;
-            font-size: 20px;
+            font-size: 30px;
             text-align: center;
+            place-items: center;
         }
         button{
             padding: 15px;
             border-radius: 13px;
             text-align: center;
             border: none;
+            place-items: center;
             
+        }
+        a{
+            color: #121212;
         }
     </style>
 <body>
@@ -27,6 +32,7 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
+    <button onclick="/sesion">Iniciar sesión</button>
 <a href="/sesion">ya tengo cuenta</a>
 </head>
 </body>
