--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -3,7 +3,10 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<style> 
+<style>
+    body{
+        place-items: center;
+    }
     button{
         background-color: red;
         color: white;
@@ -13,7 +16,11 @@
     }
     p{
         text-align: center;
-        font-size: 50px;
+        font-size: 30px;
+    }
+    h1{
+        text-align: center;
+        font-size: 23px;
     }
     #particles-js{
         position: fixed;
@@ -23,7 +30,8 @@
         z-index: -1;
     }
 </style>
-<p>Espero que disfrutes este sitio web:::...:::</p>
+<p>La cademia Cerebritos Peruanos</p>
+<h1>Te da la bienvenida</h1>
 </head>
 <body>
 <div id="particles-js"></div>
