--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -5,14 +5,19 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <style>
     body{
-        place-items: center;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     button{
         background-color: red;
         color: white;
         padding: 20px;
-        border-radius: 50px;
+        border-radius: 240px;
         border: none;
+        heigth: 30px;
+        place-items: center;
     }
     p{
         text-align: center;
