--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
               
               background-size: 400% 400%;
               animation:fondoAnimado 10s ease infinite;
-              color: red;
+              color: #121212;
               font-size: 50px;
               font-family: Potland;
               text-align: center;
@@ -28,12 +28,11 @@
               border: none;
               cursor: pointer;
               font-size:10px;
-              font-family: Times;
-              color: white;
-              background-color: #121212;
+              color: #121212;
+              background-color: white;
          }
          p{
-           font-family: times;
+           font-family: Times;
            font-size: 30px;
           }
          #particles-js{
@@ -44,12 +43,12 @@
            z-index: -1;
          } 
 </style>
-<p>Amig@ te doy la bienvenida</p>
+<p>El estudio no tiene límites</p>
 </head>
 
 <body>
 <div id="particles-js"></div>
-    <button onclick="inicio()">Inicio</button>
+    <button onclick="inicio()">INGRESAR AL CHATBOT</button>
     <script>
            
            function inicio(){
@@ -63,7 +62,7 @@
                     icon: "info"})}
            }
     </script>
-    <button onclick="pag1()">Siguiente</button>
+    <button onclick="pag1()">INGRESAR AL PORTAL DE CP</button>
     <script>
          function pag1() {
               window.location.href="/PAG1";
