--- a/templates/registro.html
+++ b/templates/registro.html
@@ -22,6 +22,8 @@
             color: #121212;
         }
     </style>
+    <p href="/sesion">ya tengo cuenta</p>
+</head>
 <body>
 <form method="POST"> 
     <input type="text" name="username" 
@@ -33,7 +35,6 @@
     <button type="submit">Registrarse</button>
     </form>
     <button onclick="/sesion">Iniciar sesión</button>
-<a href="/sesion">ya tengo cuenta</a>
-</head>
+
 </body>
 </html>
