--- a/templates/registro.html
+++ b/templates/registro.html
@@ -18,8 +18,9 @@
             place-items: center;
             
         }
-        a{
+        p{
             color: #121212;
+            font-align: end;
         }
     </style>
     <p href="/sesion">ya tengo cuenta</p>
