--- a/templates/registro.html
+++ b/templates/registro.html
@@ -18,12 +18,12 @@
             place-items: center;
             
         }
-        p{
+        a{
             color: #121212;
-            font-align: end;
+            font-align: right;
         }
     </style>
-    <p href="/sesion">ya tengo cuenta</p>
+    <a href="/sesion">ya tengo cuenta</a>
 </head>
 <body>
 <form method="POST"> 
