--- a/templates/registro.html
+++ b/templates/registro.html
@@ -9,6 +9,10 @@
             font-size: 30px;
             text-align: center;
             place-items: center;
+            width: 90vw;
+            max-width:100;
+            heigth: 60vh;
+            overflow-y: auto;
         }
         button{
             padding: 15px;
@@ -21,6 +25,9 @@
         a{
             color: #121212;
             font-align: right;
+        }
+        .container{
+            margin-bottom: 12px;
         }
     </style>
     <a href="/sesion">ya tengo cuenta</a>
