--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -5,10 +5,10 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <style>
     body{
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        wight: 90vw;
+        max-widht: 400px
+        heigth: 60vh;
+        overflow-y: auto;
     }
     button{
         background-color: red;
